--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
             problem solver, with a strong attention to detail. I've gained experience in web development and I'm always
             looking for new challenges to expand my skills. I'm excited to bring my enthusiasm and dedication to a new
             project or team.</p>
+        <br><br>
+            <p>
+                <h3><u>Resume</u></h3>
+                    <button class="button"> <a href="RESUME.png" target="_blank">
+                            </i>Open</a>
+                    </button>
+                
+            </p>
     </section>
 
     <section id="projects">
