--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
 <head>
     <title>My Portfolio</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <header>
         <div class="navbar" id="nav-1">
-            <h1>My Portfolio</h1>
+            <h1><i class="fa-solid fa-user"></i>&nbsp;&nbsp;My Portfolio</h1>
         </div>
         <div class="navbar" id="nav-2">
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#home">Home&nbsp;&nbsp;</a></li>
+                    <li><a href="#about">About&nbsp;&nbsp;</a></li>
+                    <li><a href="#projects">My Certification&nbsp;&nbsp;</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -25,42 +28,43 @@
     </header>
 
     <section id="home">
-        <h2><u>Welcome to My Portfolio!</u></h2>
+        <h2><i class="fa-solid fa-diamond"></i>&nbsp;&nbsp;<u>Welcome to My Portfolio!</u></h2>
         <p>Hi, I'm Het Gajjar, a web developer. <br>This is my portfolio website showcasing my work and skills.
 
         </p>
     </section>
 
     <section id="about">
-        <h2><u>About Me</u></h2>
+        <h2><i class="fa-solid fa-diamond"></i>&nbsp;&nbsp;<u>About Me</u></h2>
         <p>Hi, I'm Het, an undergraduate student with a passion for technology. I'm a quick learner and a creative
             problem solver, with a strong attention to detail. I've gained experience in web development and I'm always
             looking for new challenges to expand my skills. I'm excited to bring my enthusiasm and dedication to a new
             project or team.</p>
         <br><br>
         <p>
-        <h3><u>Resume</u></h3>
-        <button class="button"> <a href="RESUME.png" target="_blank">
-                </i>Open</a>
-        </button>
+        <h3><i class="fa-solid fa-diamond"></i>&nbsp;&nbsp;<u>Resume</u>&nbsp;&nbsp;
+            <button class="button"> <a id="link" href="RESUME.png" target="_blank">
+            </i>Open</a>&nbsp;&nbsp;<i class="fa-sharp fa-solid fa-up-right-from-square"></i>
+    </button>
+        </h3>
 
         </p>
     </section>
 
     <section id="projects">
-        <h2><u>My Certifications</u></h2>
+        <h2><i class="fa-solid fa-diamond"></i>&nbsp;&nbsp;<u>My Certifications</u></h2>
         <div class="project">
             <h3>Certification 1
-                <button class="button"> <a href="brainybeam.png" target="_blank">
-                        </i>Open</a>
+                <button class="button"> <a id="link" href="brainybeam.png" target="_blank">
+                        </i>Open</a>&nbsp;&nbsp;<i class="fa-sharp fa-solid fa-up-right-from-square"></i>
                 </button>
             </h3>
             <p>Certification Of BrainyBeam Internship</p>
         </div>
         <div class="project">
             <h3>Certification 2
-                <button class="button"> <a href="eldi.png" target="_blank">
-                        </i>Open</a>
+                <button class="button"> <a id="link" href="eldi.png" target="_blank">
+                        </i>Open</a>&nbsp;&nbsp;<i class="fa-sharp fa-solid fa-up-right-from-square"></i>
                 </button>
             </h3>
             <p>Certification Of Elsner Learning &
@@ -68,8 +72,8 @@
         </div>
         <div class="project">
             <h3>Certification 3
-                <button class="button"> <a href="python.png" target="_blank">
-                        </i>Open</a>
+                <button class="button"> <a id="link" href="python.png" target="_blank">
+                        </i>Open</a>&nbsp;&nbsp;<i class="fa-sharp fa-solid fa-up-right-from-square"></i>
                 </button>
             </h3>
             <p>Python 3.4.3 Training, Spoken Tutorial
@@ -77,8 +81,8 @@
         </div>
         <div class="project">
             <h3>Certification 4
-                <button class="button"> <a href="arduino.png" target="_blank">
-                        </i>Open</a>
+                <button class="button"> <a id="link" href="arduino.png" target="_blank">
+                        </i>Open</a>&nbsp;&nbsp;<i class="fa-sharp fa-solid fa-up-right-from-square"></i>
                 </button>
             </h3>
             <p>Arduino Training, Spoken Tutorial
@@ -86,16 +90,17 @@
         </div>
         <div class="project">
             <h3>Certification 5
-                <button class="button"> <a href="alexa.png" target="_blank">
-                        </i>Open</a>
+                <button class="button"> <a id="link" href="alexa.png" target="_blank">
+                        </i>Open</a>&nbsp;&nbsp;<i class="fa-sharp fa-solid fa-up-right-from-square"></i>
                 </button>
             </h3>
             <p>IEEE-Alexa Development skills</p>
         </div>
         <div class="project">
             <h3>Certification 6
-                <button class="button"> <a href="unity.png" target="_blank">
-                        Open</a> </button>
+                <button class="button"> <a id="link" href="unity.png" target="_blank">
+                        Open</a>&nbsp;&nbsp;<i class="fa-sharp fa-solid fa-up-right-from-square"></i>
+                </button>
             </h3>
             <p>IEEE-Unity Game Development & it's
                 Application</p>
@@ -103,12 +108,12 @@
     </section>
 
     <section id="contact" style="padding:1%;">
-        <h2><u>Contact Me</u></h2>
+        <h2><i class="fa-solid fa-headset"></i></i>&nbsp;&nbsp;<u>Contact Me</u></h2>
         <p>If you have any inquiries or would like to work together, feel free to reach out to me.</p><br>
         <div style="display: flex; text-align: center; justify-content: space-evenly;">
-            <p>Email: hetygajjar@gmail.com</p>
-            <p>Phone: +91 93275 36128</p>
-            <p>LinkedIn: linkedin.com/in/hetgajjar</p>
+            <p><i class="fa-solid fa-envelope"></i>&nbsp;&nbsp; hetygajjar@gmail.com</p>
+            <p><i class="fa-solid fa-square-phone"></i>&nbsp;&nbsp; +91 93275 36128</p>
+            <p><i class="fa-brands fa-linkedin"></i>&nbsp;&nbsp; linkedin.com/in/hetgajjar</p>
         </div>
     </section>
 
