--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
         <br><br>
         <p>
         <h3><i class="fa-solid fa-diamond"></i>&nbsp;&nbsp;<u>Resume</u>&nbsp;&nbsp;
-            <button class="button"> <a id="link" href="RESUME.png" target="_blank">
+            <button class="button"> <a id="link" href="Resume.png" target="_blank">
             </i>Open</a>&nbsp;&nbsp;<i class="fa-sharp fa-solid fa-up-right-from-square"></i>
     </button>
         </h3>
 
         </p>
     </section>
+
+    <!-- <section><button><a href="Resume.pdf" target="_blank"> PDF</a></button></section> -->
 
     <section id="projects">
         <h2><i class="fa-solid fa-diamond"></i>&nbsp;&nbsp;<u>My Certifications</u></h2>
@@ -90,6 +92,30 @@
         </div>
         <div class="project">
             <h3>Certification 5
+                <button class="button"> <a id="link" href="BackendWebDevelopmentDevTown-1.png" target="_blank">
+                        </i>Open</a>&nbsp;&nbsp;<i class="fa-sharp fa-solid fa-up-right-from-square"></i>
+                </button>
+            </h3>
+            <p>Backend Web-Development (DevTown)</p>
+        </div>
+        <div class="project">
+            <h3>Certification 6
+                <button class="button"> <a id="link" href="CompletionOfTheMicrosoftAmbassador-1.png" target="_blank">
+                        </i>Open</a>&nbsp;&nbsp;<i class="fa-sharp fa-solid fa-up-right-from-square"></i>
+                </button>
+            </h3>
+            <p>Completion Of The Microsoft-Ambassador</p>
+        </div>
+        <div class="project">
+            <h3>Certification 7
+                <button class="button"> <a id="link" href="HotstarClone-Devtown-1.png" target="_blank">
+                        </i>Open</a>&nbsp;&nbsp;<i class="fa-sharp fa-solid fa-up-right-from-square"></i>
+                </button>
+            </h3>
+            <p>HotstarClone (Dev Town)</p>
+        </div>
+        <div class="project">
+            <h3>Certification 8
                 <button class="button"> <a id="link" href="alexa.png" target="_blank">
                         </i>Open</a>&nbsp;&nbsp;<i class="fa-sharp fa-solid fa-up-right-from-square"></i>
                 </button>
@@ -97,7 +123,7 @@
             <p>IEEE-Alexa Development skills</p>
         </div>
         <div class="project">
-            <h3>Certification 6
+            <h3>Certification 9
                 <button class="button"> <a id="link" href="unity.png" target="_blank">
                         Open</a>&nbsp;&nbsp;<i class="fa-sharp fa-solid fa-up-right-from-square"></i>
                 </button>
