--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <br><br>
         <p>
         <h3><i class="fa-solid fa-diamond"></i>&nbsp;&nbsp;<u>Resume</u>&nbsp;&nbsp;
-            <button class="button"> <a id="link" href="Resume.png" target="_blank">
+            <button class="button"> <a id="link" href="updatedResume.png" target="_blank">
             </i>Open</a>&nbsp;&nbsp;<i class="fa-sharp fa-solid fa-up-right-from-square"></i>
     </button>
         </h3>
